--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <p>My expertise spans the Hadoop and Spark ecosystems, including YARN, MapReduce, Hive and Kafka. I'm proficient in Python, SQL, and Scala, with experience in machine learning and natural language processing.</p>  
                     <p>Currently pursuing my Master's in Computer Science at Georgia State University with a 4.30 GPA, I'm passionate about leveraging big data technologies to solve complex problems and drive business value.</p>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/your-github" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/nikhil-goud-yeminedi-184576217/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/nikhilgoud003" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                         <a href="mailto:nyeminedi1@student.gsu.edu"><i class="fas fa-envelope"></i></a>
                         <a href="assets/Nikhil_Yeminedi_Resume.pdf" target="_blank" class="view-resume">View Resume</a>
                     </div>
@@ -156,12 +156,12 @@
             <p>&copy; 2025 Nikhil Yeminedi. All rights reserved.</p>
         </div>
         <div class="social-links">
-            <a href="https://github.com/your-github" target="_blank" class="social-icon">
+            <a href="https://github.com/nikhilgoud003" target="_blank" class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512" height="24" width="24">
                     <path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
                 </svg>
             </a>
-            <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" class="social-icon">
+            <a href="https://www.linkedin.com/in/nikhil-goud-yeminedi-184576217/" target="_blank" class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512" height="24" width="24">
                     <path d="M100.3 480H7.4V191.9h92.9V480zm-46.5-331.4c-29.6 0-53.5-23.9-53.5-53.4 0-29.5 23.9-53.4 53.5-53.4 29.6 0 53.5 23.9 53.5 53.4 0 29.5-23.9 53.4-53.5 53.4zm357.1 331.4h-92.9V314.5c0-39.2-14.2-66.1-49.7-66.1-27.2 0-43.4 18.3-50.5 35.9-2.6 6.4-3.3 15.3-3.3 24.2v101.5h-92.9V191.9h92.9v47h1.3c12.7-19.1 35.6-46.5 86.3-46.5 62.9 0 110.2 40.9 110.2 128.9V480z"></path>
                 </svg>
