--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section id="intro">
             <div class="text-center py-16 bg-white dark:bg-black text-black dark:text-white transition-colors duration-500">
-                <img src="assets/header_image.jpg" 
+                <img src="assets/PHOTO.jpg" 
                      alt="I'm Nikhil Yeminedi" 
                      class="mx-auto mb-8 w-48 h-48 rounded-full object-cover transform transition-transform duration-300 hover:scale-105">
                 <h1 class="text-4xl font-bold mb-4">
